@@ -3,6 +3,19 @@ ext {
     slf4jVersion = "2.0.3"
 }
 
+test {
+    useJUnitPlatform()
+    systemProperty("java.awt.headless", "true")
+    systemProperty("testGroups", project.properties.get("testGroups"))
+    systemProperty("io.netty.leakDetection.level", "paranoid")
+    systemProperty("io.netty5.leakDetectionLevel", "paranoid")
+    systemProperty("io.netty5.leakDetection.targetRecords", "32")
+    systemProperty("io.netty5.buffer.lifecycleTracingEnabled", "true")
+    systemProperty("io.netty5.buffer.leakDetectionEnabled", "true")
+    jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
+             "--add-opens=java.base/java.util=ALL-UNNAMED"])
+}
+
 dependencies {
 
     implementation("com.google.guava:guava:31.1-jre")
